examples/http_headers/envoy.yaml
static_resources:
  listeners:
    - name: matrix_ops_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/matrix_ops"
                          route:
                            cluster: matrix_ops_service
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          vm_config:
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "./httpheader.wasm" 
                  # - name: envoy.lua
                  #   typed_config:
                  #     "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
                  #     inlineCode: |
                  #       function envoy_on_response(response_handle)
                  #         response_handle:headers():add("test-from-c1", "test")
                  #       end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: fib_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8020
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/fib"
                          route:
                            cluster: fib_ingress
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          vm_config:
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "./httpheader.wasm"
                  # - name: envoy.lua
                  #   typed_config:
                  #     "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
                  #     inlineCode: |
                  #       function envoy_on_response(response_handle)
                  #         response_handle:headers():add("test-from-c2", "test")
                  #       end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: matrix_ops_service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 128.105.144.71
                      port_value: 5005
    - name: fib_ingress
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 128.105.144.71
                      port_value: 5020
    # - name: egress_http
    #   connect_timeout: 0.25s
    #   type: STATIC
    #   hosts:
    #     - socket_address: 
    #       address: 127.0.0.1
    #       port_value: 8010
    #   outlier_detection:
    #     consecutive_5xx: 3
        

admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 8001
