examples/http_headers/evoy2.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: local_service
                  max_grpc_timeout: 0s
          http_filters:
          - name: envoy.filters.http.router
          - name: envoy.filters.http.header_manipulation
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.header_manipulation.v3.HeaderManipulation
              request_headers_to_add:
              - header:
                  key: my-custom-header-incoming
                  value: "my-custom-value-incoming"
                  append: false
              response_headers_to_add:
              - header:
                  key: my-custom-header-incoming
                  value: "my-custom-value-incoming"
                  append: false
          # direction: INBOUND
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: local_service
                  max_grpc_timeout: 0s
          http_filters:
          - name: envoy.filters.http.router
          - name: envoy.filters.http.header_manipulation
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.header_manipulation.v3.HeaderManipulation
              request_headers_to_add:
              - header:
                  key: my-custom-header-OUTBOUD
                  value: "my-custom-value-OUT"
                  append: false
              response_headers_to_add:
              - header:
                  key: my-custom-header-OUT
                  value: "my-custom-value-OUT"
                  append: false
          # direction: OUTBOUND

  - name: local_service
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 128.105.144.71
                port_value: 5005
